# system-design

./: .pre-commit-config.yaml  Makefile  Makefile.hooks  README.md  config.env  pyproject.toml
docs/patterns/: behavioural.md  creational.md  readme.md  structural.md
patterns/creational/: prototype.py  singleton.py
tests/: test_prototype.py  test_singleton.py
