[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = ""
authors = ["Patryk Kubiak <Patryk.Kubiak@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.12.0"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
preview = true

[tool.isort]
profile = "black"
